<resources>
    <string name="app_name">Asteroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_data_title">Close approach date</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="potentially_hazardous_asteroid_image">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="filter_1">01-01-2022</string>
    <string name="filter_text">Item</string>
    <string name="talk_back_image">Image of the Asteroid For Today</string>
    <string name="content_desc_swipe">List of Asteroids swipe to refresh with latest data</string>
    <string name="asteroid_image">Asteroid Image from NASA API</string>
    <string name="cd_approach_date">Asteroid Close Approach Date</string>
    <string name="cd_absolute_magnitude">Asteroid Absolute Magnitude</string>
    <string name="cd_estimated_dimater">Asteroid Estimated Diameter</string>
    <string name="cd_relative_valocity">Asteroid Absolute Velocity</string>
    <string name="cd_distance_from_earth">Asteroid Distance From Earth</string>
</resources>