<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="com.echithub.asteroid.data.model.Asteroid" />

        <variable
            name="imageClickLister"
            type="com.echithub.asteroid.ui.listener.AsteroidClickLister" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".DetailFragment">

        <ImageView
            android:id="@+id/activity_detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/asteroid_image"
            android:imageUrl="@{asteroid.url}"
            android:onClick="@{imageClickLister.onAsteroidImageClicked}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_detail_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_approach_date"
                        android:text="@string/close_approach_data_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@{asteroid.closeApproachDate}"
                        android:text="@{asteroid.closeApproachDate}"
                        android:textColor="@color/default_text_color" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/cd_absolute_magnitude"
                        android:text="@string/absolute_magnitude_title"
                        android:textColor="@color/default_text_color" />

                    <TextView
                        android:id="@+id/absolute_magnitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@{String.valueOf(asteroid.absoluteMagnitude)}"
                        android:text="@{String.valueOf(asteroid.absoluteMagnitude)}"
                        android:textColor="@color/default_text_color" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/cd_estimated_dimater"
                    android:text="@string/estimated_diameter_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@{String.valueOf(asteroid.estimatedDiameter)}"
                    android:textColor="@color/default_text_color"
                    tools:text="@{String.valueOf(asteroid.estimatedDiameter)}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/cd_relative_valocity"
                    android:text="@string/relative_velocity_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/relative_velocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@{String.valueOf(asteroid.relativeVelocity)}"
                    android:textColor="@color/default_text_color"
                    tools:text="@{String.valueOf(asteroid.relativeVelocity)}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/cd_distance_from_earth"
                    android:text="@string/distance_from_earth_title"
                    android:textColor="@color/default_text_color" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@{String.valueOf(asteroid.distanceFromEarth)}"
                    android:textColor="@color/default_text_color"
                    tools:text="@{String.valueOf(asteroid.distanceFromEarth)}" />

            </LinearLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>